# jasmin-optimization

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs
src/functions/: mod.rs  quadratic.rs  rosenbrock.rs
src/linesearch/: backtracking.rs  mod.rs
src/solvers/: linesearch.rs  mod.rs  newton.rs  steepest_descent.rs  trustregion.rs
src/solvers/newton/: cholesky.rs  dogleg.rs  mod.rs  modified.rs  simple.rs
src/solvers/quasinewton/: bfgs.rs  mod.rs
src/steplength/: backtracking.rs  interpolation.rs  mod.rs  wolfe.rs
subcrates/linear-search-solver/: Cargo.toml
subcrates/linear-search-solver/src/: lib.rs  solver.rs  solver_f64.rs
subcrates/trust-region-solver/: Cargo.toml
subcrates/trust-region-solver/src/: lib.rs  solver_f64.rs
