[package]
name = "jasmin-optimization"
version = "0.1.0"
authors = ["Giacomo d'Antonio <giacomo.dantonio@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argmin = { features = ["ctrlc", "nalgebral"], path = "../../argmin" }
nalgebra = { version = "0.22", features = ["serde-serialize"] }
serde = "1.0"
rand = "0.8"
syn = "1.0"
quote = "1.0"
linear-search-solver = { path = "subcrates/linear-search-solver" }
